# websocket-performance-demo

./: .gitignore  README.md  workspace.code-workspace
backend/deno/: README.md  main.ts  static_files_server.ts  ws_handler.ts
backend/go/: README.md  go.mod  main.go
backend/node/: README.md  index.js  package-lock.json  package.json
backend/rust/: Cargo.toml  README.md
backend/rust/src/: demo_ws.rs  main.rs
frontend/: README.md  index.html  live-table.js  script.js
