[package]
name = "websocket-performance-demo"
version = "0.1.0"
authors = ["Grzegorz Rozdzialik <voreny.gelio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-actors = "3.0.0"
actix-web = "3.3.2"
actix = "0.10.0"
actix-files = "0.5.0"
serde_json = "1.0"
serde = "1.0.117"
rand = "0.8.2"
